repl — add L3 subprocess modules, allow-list policy mode, noEgress() preset
Three sandbox-policy features that compose with the L2 bytecode verifier
landed in 00ce4f8.

L3 subprocess module restriction. New SubprocessModules sealed interface
(Unrestricted / Restricted variants) controls the subprocess JVM's
--limit-modules flag. Three factories: unrestricted() (default), minimal()
(required roots only: java.base, java.compiler, jdk.compiler, jdk.jshell,
ai.singlr.repl), and allowingExtras(String...). Wired through
JvmSandboxConfig.withSubprocessModules. Strips java.sql, java.naming,
java.scripting, java.desktop, jdk.httpserver, and most JDK modules the
bootstrap doesn't transitively need — snippets that import them fail at
compile time with a clean diagnostic, before the L2 verifier runs.

Fixed a Surefire-propagation bug along the way: shouldPropagateJvmArg
now strips --add-modules and --limit-modules from inherited parent args,
so Maven's --add-modules=ALL-MODULE-PATH no longer defeats the L3
restriction by re-adding every module on the parent's module path.

Bootstrap-transitive-closure limit documented honestly on
SubprocessModules javadoc: modules the bootstrap itself requires (today
java.net.http via ai.singlr.core's HttpClientFactory) stay observable
under any L3 setting. Deployers reach for L2 deniedPackages to deny
those.

Allow-list policy mode. SandboxPolicy gains allowedPackages — opt-in
inverse of the deny-list. When non-empty, the verifier flips for
JDK-scoped owners (java/, javax/, jdk/, sun/, com/sun/): default-deny,
allow only if matched. Non-JDK owners (snippet's REPL.$JShell$N
wrappers, user helper classes, third-party JARs) always bypass — they're
the verified code. Deny rules layer on top as overrides. Rule label on
violation: allowedPackages-default-deny.

SandboxPolicy.noEgress() curated preset. "Compute with no egress"
single-API-call posture. Allows java.lang, java.util (+ stream /
function / regex / concurrent.atomic), java.math, java.time 